Implemented Inventory logic as well as minor fixes to all files