@@ -3,7 +3,6 @@ package org.example.pandaexpresspos;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.Arrays;
 
 import javafx.event.ActionEvent;
 import javafx.fxml.FXMLLoader;
@@ -27,64 +26,64 @@ public class SceneController {
     private Stage stage;
     private Scene scene;
     private Parent root;
+    private Rectangle2D screen;
 
-    HashMap<Button, ArrayList<String>> items = new HashMap<>();  // Declare the HashMap
+    private HashMap<Button, ArrayList<String>> menuItems;
 
 
     public void deleteMenuItems(ActionEvent event) throws IOException {
         // Load the layout from FXML file
         FXMLLoader loader = new FXMLLoader(getClass().getResource("fxml/deleteMenuItems.fxml"));
-        Parent root = loader.load();
+        root = loader.load();
 
         // Get the HBox from the FXML using its fx:id
         HBox buttonContainer = (HBox) loader.getNamespace().get("buttonContainer");
         buttonContainer.getChildren().clear();
 
-        HashMap<Button, ArrayList<String>> items = DataStore.getInstance().getMenuItems();
-        // Get the buttons from the HashMap instead of DataStore
-        for (Button button : new ArrayList<>(items.keySet())) { // Create a new ArrayList
-            button.setOnAction(e -> {
-                buttonContainer.getChildren().remove(button); // Remove button from the UI
-                items.remove(button); // Remove button from the HashMap
+        menuItems = DataStore.getInstance().getMenuItems();
 
-                // Update DataStore
-                DataStore.getInstance().setMenuItems(items); // Update HashMap
-                DataStore.getInstance().setNumItems(items.size()); // Update numItems
+        for (Button button : new ArrayList<>(menuItems.keySet())) {
+            button.setOnAction(e -> {
+                buttonContainer.getChildren().remove(button);
+                menuItems.remove(button);
+
+
+                DataStore.getInstance().setMenuItems(menuItems); // Update HashMap
+                DataStore.getInstance().setNumItems(menuItems.size()); // Update numItems
             });
 
-            buttonContainer.getChildren().add(button); // Add button to the UI
+            buttonContainer.getChildren().add(button);
         }
 
         setUpScene(event, root);
     }
 
-    public void addMenuItem(ActionEvent event) throws IOException {
+    public void addMenuItem(){
         ArrayList<String> newItem = new ArrayList<>();
-        newItem.add("");  // Placeholder for the name (index 0)
-        newItem.add("");  // Placeholder for the price (index 1)
+        newItem.add(""); // Placeholders
+        newItem.add("");
 
         if (buttonContainer == null) {
             FXMLLoader loader = new FXMLLoader(getClass().getResource("fxml/MenuItems.fxml"));
-            Parent root = loader.load();
             buttonContainer = (HBox) loader.getNamespace().get("buttonContainer");
         }
 
         ChangeMenuItemInfo(newItem, () -> {
             // This block will execute after the user enters the name and presses "Change Name"
-            if (!newItem.get(0).isEmpty()) {
-                // Add new button to the container and items map
-                Button newButton = new Button(newItem.get(0));  // Set the button's label to the entered name
-                HashMap<Button, ArrayList<String>> items = DataStore.getInstance().getMenuItems();
+            if (!newItem.getFirst().isEmpty()) {
+                // Add new button to the container and MenuItems map
+                Button newButton = new Button(newItem.getFirst());  // Set button's label to entered name
+                menuItems = DataStore.getInstance().getMenuItems();
 
                 // Add the new button and associate it with the newItem list in the HashMap
-                items.put(newButton, newItem);
+                menuItems.put(newButton, newItem);
                 buttonContainer.getChildren().add(newButton);
 
                 // Update DataStore to reflect the changes
-                DataStore.getInstance().setMenuItems(items);  // Update the items map in DataStore
-                DataStore.getInstance().setNumItems(items.size());  // Update the number of items
+                DataStore.getInstance().setMenuItems(menuItems);  // Update the items map in DataStore
+                DataStore.getInstance().setNumItems(menuItems.size());  // Update the number of items
 
-                // Debugging output to confirm the new button was added
+                // Debugging statements
                 System.out.println("Added new button: " + newButton.getText());
                 System.out.println("Number of items: " + DataStore.getInstance().getNumItems());
             } else {
@@ -97,22 +96,21 @@ public class SceneController {
 
     public void MenuItems(ActionEvent event) throws IOException {
         FXMLLoader loader = new FXMLLoader(getClass().getResource("fxml/MenuItems.fxml"));
-        Parent root = loader.load();
+        root = loader.load();
 
-        // Get the HBox container from the FXML file
         HBox buttonContainer = (HBox) loader.getNamespace().get("buttonContainer");
         buttonContainer.getChildren().clear();
 
         // Get the items from DataStore
-        HashMap<Button, ArrayList<String>> items = DataStore.getInstance().getMenuItems();
+        menuItems = DataStore.getInstance().getMenuItems();
 
         // Iterate over each button in the HashMap
-        for (Button button : items.keySet()) {
+        for (Button button : menuItems.keySet()) {
             button.setOnAction(e -> {
-                // Retrieve the corresponding ArrayList of strings for the clicked button
-                ArrayList<String> itemInfo = items.get(button);
+                // Retrieve information of button clicked
+                ArrayList<String> itemInfo = menuItems.get(button);
 
-                // Call the popup2 method and pass the itemInfo along with a callback (Runnable)
+                // Create popup to update information
                 if (itemInfo != null) {
                     ChangeMenuItemInfo(itemInfo, () -> {
                         System.out.println("Popup closed and data possibly updated.");
@@ -129,7 +127,7 @@ public class SceneController {
     }
 
     private void setUpScene(ActionEvent event, Parent root) {
-        Rectangle2D screen = Screen.getPrimary().getVisualBounds();
+        screen = Screen.getPrimary().getVisualBounds();
         stage = (Stage) ((Node) event.getSource()).getScene().getWindow();
         scene = new Scene(root);
         stage.setScene(scene);
@@ -141,8 +139,8 @@ public class SceneController {
     }
 
     public void ManagerStartingPage(ActionEvent event) throws IOException {
-        Parent root = FXMLLoader.load(getClass().getResource("fxml/ManagerStartingPage.fxml"));
-        Rectangle2D screen = Screen.getPrimary().getVisualBounds();
+        root = FXMLLoader.load(getClass().getResource("fxml/ManagerStartingPage.fxml"));
+        screen = Screen.getPrimary().getVisualBounds();
         stage = (Stage)((Node)event.getSource()).getScene().getWindow();
         scene = new Scene(root);
         stage.setScene(scene);
@@ -154,22 +152,44 @@ public class SceneController {
     }
 
     public void Inventory(ActionEvent event) throws IOException {
-        DataStore.getInstance().setNumItems(5);
-        Parent root = FXMLLoader.load(getClass().getResource("fxml/Inventory.fxml"));
+        FXMLLoader loader = new FXMLLoader(getClass().getResource("fxml/Inventory.fxml"));
+        root = loader.load();
 
-        Rectangle2D screen = Screen.getPrimary().getVisualBounds();
-        stage = (Stage) ((Node) event.getSource()).getScene().getWindow();
-        scene = new Scene(root);
+        // Get the HBox container from the FXML file
+        HBox buttonContainer = (HBox) loader.getNamespace().get("buttonContainer");
+        buttonContainer.getChildren().clear();
 
-        stage.setScene(scene);
-        stage.setX(0);
-        stage.setY(0);
-        stage.setWidth(screen.getWidth());
-        stage.setHeight(screen.getHeight());
-        stage.show();
+        // Get the inventory items from DataStore
+        HashMap<Button, Integer> inventoryItems = DataStore.getInstance().getInventoryItems();
+
+        // Iterate over each button in the HashMap
+        for (Button button : inventoryItems.keySet()) {
+
+            button.setOnAction(e -> {
+                // Retrieve the corresponding inventory value for the clicked button
+                Integer inventoryInfo = DataStore.getInstance().getInventoryForItem(button);
+
+                // Call the ChangeInventoryItemInfo method and pass the inventoryWrapper along with a callback (Runnable)
+                if (inventoryInfo != null) {
+                    ChangeInventoryItemInfo(DataStore.getInstance(), button, () -> {
+                        // Callback to handle any post-popup logic, such as updating the UI
+                        System.out.println("Popup closed and inventory updated.");
+                    });
+                } else {
+                    System.out.println("Error: No inventory data found for button " + button.getText());
+                }
+            });
+
+            buttonContainer.getChildren().add(button);
+        }
+
+        setUpScene(event, root);
     }
 
-    public Stage ChangeMenuItemInfo(ArrayList<String> itemInfo, Runnable onComplete) {
+
+
+
+    public void ChangeMenuItemInfo(ArrayList<String> itemInfo, Runnable onComplete) {
         VBox layout = new VBox(10);  // VBox layout with 10px spacing
 
         Label label = new Label("Item Information:");
@@ -189,30 +209,28 @@ public class SceneController {
         Button changeNameButton = new Button("Change Name");
         Button changePriceButton = new Button("Change Price");
 
-        // Handle changing name
         changeNameButton.setOnAction(e -> {
             String newName = nameField.getText();
             if (!newName.isEmpty()) {
-                itemInfo.set(0, newName);  // Modify the first element in the list
+                itemInfo.set(0, newName);
                 listView.getItems().clear();
-                listView.getItems().addAll(itemInfo);  // Update ListView after modification
+                listView.getItems().addAll(itemInfo);
 
-                // Call the onComplete callback after setting the new name
-                if (onComplete != null) {
-                    onComplete.run();  // This will trigger the callback to finish the task
-                }
+
             } else {
                 System.out.println("Name cannot be empty.");
             }
         });
 
-        // Handle changing price (or any other attribute)
         changePriceButton.setOnAction(e -> {
             String newPrice = priceField.getText();
-            if (!newPrice.isEmpty()) {
-                itemInfo.set(1, newPrice);  // Modify the second element in the list
+            if (!newPrice.isEmpty() && Double.parseDouble(newPrice) > 0) {
+                itemInfo.set(1, newPrice);
                 listView.getItems().clear();
-                listView.getItems().addAll(itemInfo);  // Update ListView after modification
+                listView.getItems().addAll(itemInfo);
+                if (onComplete != null) { // Adds button to Menu Items
+                    onComplete.run();
+                }
             } else {
                 System.out.println("Price cannot be empty.");
             }
@@ -231,7 +249,54 @@ public class SceneController {
         stage.setScene(scene);
         stage.show();
 
-        return stage;
     }
 
+    public void ChangeInventoryItemInfo(DataStore inventoryWrapper, Button button, Runnable onComplete) {
+        VBox layout = new VBox(10);
+
+        Label label = new Label("Inventory Information:");
+
+        ListView<Integer> listView = new ListView<>();
+        listView.getItems().add(inventoryWrapper.getInventoryForItem(button));
+
+        TextField inventoryField = new TextField();
+        inventoryField.setPromptText("Enter new inventory amount");
+
+        Button changeInventoryButton = new Button("Add to Inventory");
+
+        changeInventoryButton.setOnAction(e -> {
+            String newInventoryText = inventoryField.getText();
+            if (!newInventoryText.isEmpty() && Integer.parseInt(newInventoryText) > 0) {
+                try {
+                    Integer newInventory = Integer.parseInt(newInventoryText) + DataStore.getInstance().getInventoryForItem(button);
+                    listView.getItems().clear();
+                    listView.getItems().add(newInventory);
+                    inventoryWrapper.setInventoryForItem(button, newInventory);
+
+                    onComplete.run();
+                } catch (NumberFormatException ex) {
+                    System.out.println("Invalid inventory amount. Please enter a valid number.");
+                }
+            } else {
+                System.out.println("Invalid inventory amount. Please enter a valid number.");
+            }
+        });
+
+        layout.getChildren().addAll(label, listView, inventoryField, changeInventoryButton);
+
+        Stage stage = new Stage();
+        stage.setWidth(300);
+        stage.setHeight(300);
+        stage.setX(500);
+        stage.setY(500);
+
+        layout.setAlignment(Pos.CENTER);
+        Scene scene = new Scene(layout);
+        stage.setScene(scene);
+        stage.show();
+
+    }
 }
+
+
+
